[gd_scene load_steps=5 format=3 uid="uid://dxqlq5r4tmtir"]

[ext_resource type="Script" path="res://scripts/SceneSwitcher.gd" id="1_cwcso"]

[sub_resource type="Animation" id="Animation_r24ci"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/FadeRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_vb3qn"]
resource_name = "None"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/FadeRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ul246"]
_data = {
"None": SubResource("Animation_vb3qn"),
"fade_in": SubResource("Animation_r24ci")
}

[node name="SceneSwitcher" type="Node"]
script = ExtResource("1_cwcso")

[node name="UI" type="Control" parent="."]
z_index = 50
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FadeRect" type="ColorRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ul246")
}

[node name="PollTimer" type="Timer" parent="."]

[connection signal="timeout" from="PollTimer" to="." method="_on_poll_timer_timeout"]
